// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diff tests Diff rendering no whitespace 1`] = `
<div>
  <div
    class="diff-headers"
  >
    <div
      class="header"
    >
        
    </div>
     
    <div
      class="header"
    >
        
    </div>
  </div>
   
  <div
    id="diff-body-wrapper"
    style="height: 100%;"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      id="diff-body"
    >
      <tbody>
        <tr>
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            1
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            2
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            3
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left one

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left two

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left three

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            3
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num code-cell"
          >
            
            4
          
          </td>
           
          <td
            class="positive"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right one

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num code-cell"
          >
            
            5
          
          </td>
           
          <td
            class="positive"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right two

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            6
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            8
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            7
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five

            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="toggle-container"
  >
    <div
      id="toggle-button-space"
    >
      <div
        class="inactive-option-style on-border cursor-pointer"
      >
        <p>
          Show Whitespace
        </p>
      </div>
       
      <div
        class="active-option-style off-border"
        style="background-color: slategray;"
      >
        <p>
          Hide Whitespace
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Diff tests Diff rendering with whitespace snapshot 1`] = `
<div>
  <div
    class="diff-headers"
  >
    <div
      class="header"
    >
        
    </div>
     
    <div
      class="header"
    >
        
    </div>
  </div>
   
  <div
    id="diff-body-wrapper"
    style="height: 100%;"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      id="diff-body"
    >
      <tbody>
        <tr>
          <td
            class="line-num"
          >
            
            1
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one\\r
↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            1
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              one\\r
↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            2
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            2
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              two↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            3
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙one↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            4
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙two↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num negative-line-num"
          >
            
            5
          
          </td>
           
          <td
            class="negative code-cell"
          >
            <span
              class="prefix"
            >
              -
            </span>
             
            <span
              class="content"
            >
              left∙three↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            6
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            3
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              three↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num code-cell"
          >
            
            4
          
          </td>
           
          <td
            class="positive"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right∙one↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              
            </span>
          </td>
           
          <td
            class="line-num positive-line-num code-cell"
          >
            
            5
          
          </td>
           
          <td
            class="positive"
          >
            <span
              class="prefix"
            >
              +
            </span>
             
            <span
              class="content"
            >
              right∙two↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            7
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            6
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              four↵

            </span>
          </td>
        </tr>
        <tr>
          <td
            class="line-num"
          >
            
            8
          
          </td>
           
          <td
            class="code-cell"
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five↵

            </span>
          </td>
           
          <td
            class="line-num code-cell"
          >
            
            7
          
          </td>
           
          <td
            class=""
          >
            <span
              class="prefix"
            >
               
            </span>
             
            <span
              class="content"
            >
              five↵

            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="toggle-container"
  >
    <div
      id="toggle-button-space"
    >
      <div
        class="active-option-style on-border"
        style="background-color: slategray;"
      >
        <p>
          Show Whitespace
        </p>
      </div>
       
      <div
        class="inactive-option-style off-border"
        style=""
      >
        <p>
          Hide Whitespace
        </p>
      </div>
    </div>
  </div>
</div>
`;
